fixed horizontal scrolling

--- a/css/project_styles.css
+++ b/css/project_styles.css
@@ -146,12 +146,12 @@ h3 {
 }
 
 .projectTitle {
-	font-weight: 700;
+	font-weight: 600;
 	font-size: 48px;
 }
 
 .supportTitle {
-	font-weight: 700;
+	font-weight: 600;
 	font-size: 24px;
 	color: #bdc3c7;
 }
